--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
   <!-- header de la page -->
 
   <header>
-    <h1>Hello je suis Mélodie, bienvenue sur mon site </h1>
-    <h2>Voici ma première page de code </h2>
+    <h1>Hello moi c'est <div class="rouge">Mélodie</div> bienvenue sur mon site </h1>
+
+
   </header>
 
 
   <!-- section "A propos de moi" -->
-  <section id="about">
-
+  <section id="titreabout">
     <h2 class="melo"> Quelques infos sur moi...</h2>
+  </section>
+  <section id="about">
     <img class="roundedImage" src="image/moi.png" alt="c'est moi" />
     <p style="vertical-align:middle"> Je m'appelle Mélodie Alcin, j'ai 27 ans, je suis scorpion.
       j'apprend l'UX design, car je souhaiterai devenir UX Design.J'adore le metier d'UX. Je le trouve passionnant et
@@ -35,49 +37,43 @@
 
 
   <!-- Section "Mes choses préférées" -->
-  <section id="loves">
-    <h2>Mes trucs préférés</h2>
 
-    <h3> Mes animaux préférés</h3>
-    <p>Les chats</p>
-    <p>Les lapins</p>
-    <p>Les chiens</p>
+  <section id="titreloves">
+    <h2>Mes activités préférés</h2>
+  </section>
+
+  <section id="titreloves2">
+    <h3>La danse <div><img class="image2" src="image/danse.jpg" alt="danse"></div>
+    </h3>
+    <h3>Le piano<div><img class="image2" src="image/piano.jpeg" alt="piano"></div>
+    </h3>
+    <h3> Le chinois<div><img class="image2" src="image/chinois.png" alt="chinois"></div>
+    </h3>
+  </section>
 
 
-    <h3>Mes activités préférés</h3>
-    <div id="colonne1">
-      <h4>La danse</h4>
-      <img class="roundedImage" src="image/danse.jpg" alt="danse">
 
-      <p> Je fais de la danse depuis que j'ai 7 ans. j'ai pratiqué plusieurs type de danse. Le classique, modern jazz et
-        Hip
-        Hop. Cette année j'ai commencer la salsa </p>
-    </div>
 
-    <div id="colonne2">
-      <h4>Le piano</h4>
-      <img class="roundedImage" src="image/piano.jpeg" alt="piano">
+  <section id="textloves">
+    <div class="textloves">
+      <p>Je fais de la danse depuis que j'ai 7 ans. j'ai pratiqué plusieurs type de danse. Le classique, modern jazz
+        et Hip Hop. Cette année j'ai commencer la salsa
+      </p>
+
 
       <p>Je me suis lancé le défi d'apprendre le piano seul. C'est un peu compliqué, mais je progresse doucement.
       </p>
-    </div>
-
-    <div id="centre">
-      <h4>Le Chinois</h4>
-      <img class="roundedImage" src="image/chinois.png" alt="chinois">
 
       <p>Au lycée, j'ai appris le chinois pendant 3 ans. C'est une langue fascinante. Beaucoup pense que c'est une
         langue
         difficile, mais finalement elle est très simple à apprendre </p>
     </div>
-
-
   </section>
 
   <section id="travel">
 
-    <h2>Mon prochain voyage</h2>
-    <a href="https://www.lonelyplanet.fr/destinations/amerique/cuba"> Une ile de rêve</a>
+
+    <a href="https://www.lonelyplanet.fr/destinations/amerique/cuba" class="boutontravel "> Mon prochain voyage</a>
 
   </section>
 
@@ -85,8 +81,7 @@
   <!-- footer & contact info -->
 
   <footer id="contact">
-    <a href="mailto:melodie.alcin@gmail.com"> Contactez-moi </a>
-
+    <a href="mailto:melodie.alcin@gmail.com" class="bouton"> Contactez-moi </a>
 
   </footer>
 </body>
