--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </section>
   <section id="about">
     <img class="roundedImage" src="image/moi.png" alt="c'est moi" />
-    <p style="vertical-align:middle"> Je m'appelle ......, j'ai ... ans, je suis scorpion.
+    <p style="vertical-align:middle"> Je m'appelle Mélodie, j'ai 27 ans, je suis scorpion.
       j'apprend l'UX design, car je souhaiterai devenir UX Design.J'adore le metier d'UX. Je le trouve passionnant et
       ludique. Auparavant j'ai beaucoup travaillé dans le digital et dans le luxe.</p>
 
