--- a/index.html
+++ b/index.html
@@ -2,88 +2,120 @@
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8">
-  <title> Hello je suis Mélodie
-  </title>
-  <link rel="stylesheet" href="style/style.css" />
-
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Nunito:400,900|Work+Sans&display=swap"
-    rel="stylesheet">
-
+    <meta charset="UTF-8">
+    <title> Mélodie Alcin
+    </title>
+    <link rel="stylesheet" href="style/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Nunito:400,900|Work+Sans&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Montserrat:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Raleway:wght@400;500;600;700&family=Sacramento&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-  <!-- header de la page -->
+    <!-- header de la page -->
 
-  <header>
-    <h1>Hello moi c'est <div class="rouge">Mélodie</div> bienvenue sur mon site </h1>
+    <header>
+        <h1> Melodie Alcin </h1>
+    </header>
 
+    <!-- section "MeVoici" -->
 
-  </header>
+    <section id="MeVoici">
+        <div class="photoprincipale">
+            <img class="roundedImage" src="image/noretouche.png" alt="c'est moi" /> </div>
+        <div class="pres">
+            <p> Hello ! Je te souhaite la bienvenue sur ma page, je m'apelle Mélodie j'ai 27 ans, j'habite à Suresnes et
+                je suis UX
+                Designer. Descend plus bas pour découvrir mes passions </p>
+        </div>
+    </section>
 
+    <!-- section "Menu" -->
+    <section id="Menu">
 
-  <!-- section "A propos de moi" -->
-  <section id="titreabout">
-    <h2 class="melo"> Quelques infos sur moi...</h2>
-  </section>
-  <section id="about">
-    <img class="roundedImage" src="image/moi.png" alt="c'est moi" />
-    <p style="vertical-align:middle"> Je m'appelle Mélodie, j'ai 23 ans, je suis scorpion.
-      j'apprend l'UX design, car je souhaiterai devenir UX Design.J'adore le metier d'UX. Je le trouve passionnant et
-      ludique. Auparavant j'ai beaucoup travaillé dans le digital et dans le luxe.</p>
-
-
-  </section>
-
-
-  <!-- Section "Mes choses préférées" -->
-
-  <section id="titreloves">
-    <h2>Mes activités préférés</h2>
-  </section>
-
-  <section id="titreloves2">
-    <h3>La danse <div><img class="image2" src="image/danse.jpg" alt="danse"></div>
-    </h3>
-    <h3>Le piano<div><img class="image2" src="image/piano.jpeg" alt="piano"></div>
-    </h3>
-    <h3> Le chinois<div><img class="image2" src="image/chinois.png" alt="chinois"></div>
-    </h3>
-  </section>
+    </section>
 
 
 
+    <!-- Section "Ma passion gateaux" -->
 
-  <section id="textloves">
-    <div class="textloves">
-      <p>Je fais de la danse depuis que j'ai 7 ans. j'ai pratiqué plusieurs type de danse. Le classique, modern jazz
-        et Hip Hop. Cette année j'ai commencer la salsa
-      </p>
+    <section id="titreloves">
 
-
-      <p>Je me suis lancé le défi d'apprendre le piano seul. C'est un peu compliqué, mais je progresse doucement.
-      </p>
-
-      <p>Au lycée, j'ai appris le chinois pendant 3 ans. C'est une langue fascinante. Beaucoup pense que c'est une
-        langue
-        difficile, mais finalement elle est très simple à apprendre </p>
-    </div>
-  </section>
-
-  <section id="travel">
+        <h2>Ma Sweet Passion</h2>
+    </section>
 
 
-    <a href="https://www.lonelyplanet.fr/destinations/amerique/cuba" class="boutontravel "> Mon prochain voyage</a>
+    <section id="titreloves2">
+        <h3> Citron & Framboise <div><img class="image2" src="image/framb.png
+            " alt="Cake framboise  "></div>
+        </h3>
+        <h3> Oreo & Vanille <div><img class="image2" src="image/choco.png
+            " alt="Cake chocolat"></div>
+        </h3>
+        <h3> Chocolat & Mascarpone <div><img class="image2" src="image/blanc.png" alt="chinois"></div>
+        </h3>
+    </section>
 
-  </section>
+    <section id="textloves">
+
+        <p> La patisserie est une de mes passions. Ma grande spécialité sont les Layers Cakes (Gateaux avec
+            plusieurs couches). Ils sont à la fois très sthetiques et gourmands. Ces gateaux sont très long à faire car
+            il y a toujours au minimum trois étapes: La base du gateux, le fourrage, et le glaçage. Ce que j'aime
+            particulièrement c'est qu'avec ces gateaux nous pouvons être très
+            créatifs ! Je suis assez fière de cette pasion car j'ai appris toute seule et en regardant des tutos sur
+            Youtube et Instagram
+        </p>
+    </section>
 
 
-  <!-- footer & contact info -->
+    <!-- Section "Ma passion danse" -->
+    <section id="titredanse">
+        <h2>Mon grand amour: La danse </h2>
+    </section>
 
-  <footer id="contact">
-    <a href="mailto:melodie.alcin@gmail.com" class="bouton"> Contactez-moi </a>
+    <section id="contenudanse">
+        <p>
+            <div class="photodanseuse"> <img class="image2" src="image/danse.jpg"> </div>
+        </p>
+        <div class="lien">
+            <p>La danse est ma première passion. J'adore la danse car c'est à la fois un sport et un art. C'est
+                aussi une façon de s'exprimer. J'ai commencé la danse à l'âge de 7 ans. J'ai commencé par de la
+                danse classique, ensuite j'ai fait de la danse moderne, puis hip-hop, et actuellement je fais de
+                la kizomba. </p>
 
-  </footer>
+
+            <p><a href="https://laxstudio.fr/" class="boutonecole "> Mon école de danse </a></p>
+        </div>
+
+    </section>
+
+    <!-- Section "contact" -->
+
+    <section id="titrecontact">
+        Restons en contact
+    </section>
+
+    <section id="mail">
+        <p><a href="mailto:melodie.alcin@gmail.com" class="bouton"> M'envoyer un mail </a></p>
+    </section>
+
+    <section id="icone">
+        <div><a href="https://www.facebook.com/MelodieBA"> <img src="image/facebook-logo.png" alt="facebook"></a></div>
+        <div> <a href="https://www.instagram.com/mello.na/"> <img src="image/insta.png" alt="Instagram"></a> </div>
+        <div> <a href="https://www.linkedin.com/in/melodiealcin/"> <img src="image/linkedin.png" alt="linkedin"> </a>
+        </div>
+    </section>
+
+
+
+
+    <!-- footer -->
+    <footer></footer>
 </body>
 
 </html>
