--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section id="MeVoici">
         <div class="photoprincipale">
-            <img class="roundedImage" src="image/noretouche.png" alt="c'est moi" /> </div>
+            <img class="roundedImage" src="image/MelodieBAlcin.png" alt="c'est moi" /> </div>
         <div class="pres">
             <p> Hello ! Je te souhaite la bienvenue sur ma page, je m'apelle Mélodie j'ai 27 ans, j'habite à Suresnes et
                 je suis UX
@@ -49,17 +49,21 @@
         <h2>Ma Sweet Passion</h2>
     </section>
 
-
     <section id="titreloves2">
-        <h3> Citron & Framboise <div><img class="image2" src="image/framb.png
+        <h3>
+            <div class=layercake>Layer Cake</div> <br> Citron & Framboise <div><img class="image2" src="image/framb.png
             " alt="Cake framboise  "></div>
         </h3>
-        <h3> Oreo & Vanille <div><img class="image2" src="image/choco.png
+        <h3>
+            <div class=layercake>Layer Cake</div> <br> Chocolat & Friandises <div><img class="image2" src="image/choco.png
             " alt="Cake chocolat"></div>
         </h3>
-        <h3> Chocolat & Mascarpone <div><img class="image2" src="image/blanc.png" alt="chinois"></div>
+        <h3>
+            <div class=layercake>Layer Cake</div> <br>Chocolat & Mascarpone <div><img class="image2"
+                    src="image/blanc.png" alt="chinois"></div>
         </h3>
     </section>
+
 
     <section id="textloves">
 
@@ -95,7 +99,6 @@
     </section>
 
     <!-- Section "contact" -->
-
     <section id="titrecontact">
         Restons en contact
     </section>
@@ -110,8 +113,6 @@
         <div> <a href="https://www.linkedin.com/in/melodiealcin/"> <img src="image/linkedin.png" alt="linkedin"> </a>
         </div>
     </section>
-
-
 
 
     <!-- footer -->
